# solid_c_crossport

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
doc/: CODETREE_DESIGN.md
examples/: ANSITEST.BAT  ANSITEST.C  CUBE.BAT  CUBE.C  DSTAR.BAT  DSTAR.C  ENIGMA.BAT  ENIGMA.C  FARDEMO.BAT  FILETEST.BAT  FILETEST.C  MANDEL.BAT  MANDEL.C  README.md  RPN.BAT  RPN.C  STATICS.BAT  STATICS.C  USELESS.BAT  USELESS.C  VIEWER.BAT  VIEWER.C  WORDCNT.BAT  WORDCNT.C
reference/: BENCH.ASM  BENCH.BAT  BENCH.C  BENCH.REL  BENCH.TMC  BIN2TRD.ASM  BIN2TRD.BAT  BIN2TRD.REL  BIN2TRD.TMC  CPRINTF.ASM  CPRINTF.BAT  CPRINTF.C  CPRINTF.REL  CPRINTF.TMC  CPUTS.ASM  CPUTS.BAT  CPUTS.C  CPUTS.REL  CPUTS.TMC  CUBE.ASM  CUBE.BAT  CUBE.C  CUBE.REL  CUBE.TMC  DSTAR.ASM  DSTAR.BAT  DSTAR.C  DSTAR.REL  DSTAR.TMC  ENIGMA.ASM  ENIGMA.BAT  ENIGMA.C  ENIGMA.REL  ENIGMA.TMC  FARDEMO.ASM  FARDEMO.C  FARDEMO.REL  FARDEMO.TMC  FILETEST.ASM  FILETEST.BAT  (+47 more)
solid_c-src/as/: 01-asm.bat  02-cmain.bat  AMAIN.ASM  ASM1.ASM  DMAIN.ASM  IO.ASM
solid_c-src/cc/: 01-cc.bat  02-cmain.bat  CC.1  CC1.ASM  CMAIN.ASM  DMAIN.ASM  IO1.ASM
solid_c-src/ccc/: 01-ccc.bat  02cmain.bat  CCC.ASM  CMAIN.ASM  DMAIN.ASM  IO2.ASM
solid_c-src/ol/: IO.ASM  OL1.ASM  ol1.bat
src/as/: as_defs.h  as_directives.c  as_expr.c  as_instr.c  as_io.c  as_lexer.c  as_macro.c  as_main.c  as_pass.c  as_rel.c  as_symtab.c
src/cc2/: cc2_defs.h  cc2_gen.c  cc2_io.c  cc2_main.c  cc2_out.c  cc2_sym.c  cc2_tmc.c
src/common/: types.h
src/ol/: ol_defs.h  ol_io.c  ol_main.c  ol_ops.c  ol_rel.c
tests/sources/: test1.asm  test2.asm  test3.asm  test4.asm  (+2 more)
tools/: compare.sh  rel_decode.py
